# traffic-sim

./: .gitignore  CMakeLists.txt  Makefile  QUICKSTART.md  README.md
.github/workflows/: ci.yml
bridge/: bridge.py
docs/: algorithm.md  stm32.md
examples/: 01_spec_example.json  02_left_turns_paired.json  03_straight_and_right_together.json  04_min_phase_duration.json  05_starvation_prevention.json  06_all_phases_triggered.json  06_morning_rush.json  07_all_directions_chaos.json  08_wave_attack.json  09_left_turn_siege.json  gen_examples.py
include/: config.h  controller.h  hal.h  intersection.h  road.h  simulation.h  traffic_light.h  types.h
src/: controller.c  hal_stm32.c  intersection.c  main.c  road.c  simulation.c  traffic_light.c
tests/: README  test_controller.c  test_helpers.h  test_intersection.c  test_road.c  test_traffic_light.c
web/: Dockerfile  docker-compose.yml
web/backend/: pyproject.toml  requirements.txt
web/backend/app/: main.py  models.py  simulator.py
web/backend/app/tests/: test_api.py
web/frontend/: app.js  index.html  style.css
